# Change Log
The format is based on [Keep a Changelog](http://keepachangelog.com/)

## [Unreleased]
## [v0.4.13] - Sat, 28 Nov 2020 11:35:54 +0900
### Changed
- 신청 간소화 (#120)
  - staff 이 대행
  - 신청 -> 승인 절차 대신에 바로 승인
- 활동시간 변경 (#120)

## [v0.4.12] - Thu, 26 Mar 2020 20:25:12 +0900
### Fixed
- ~12, 12~ 와 같은 중첩된 시간대를 구분할 수 있도록 함 (#116)

## [v0.4.11] - Thu, 27 Feb 2020 21:31:44 +0900
### Changed
- 봉사활동 시간대에서 09-16 을 제거 (#114)

## [v0.4.10] - Mon, 11 Nov 2019 23:11:37 +0900
### Fixed
- 봉사활동 시간대 오류 수정 (#113)

## [v0.4.9] - Thu, 08 Aug 2019 19:12:57 +0900
### Fixed
- 최대봉사인원이 0 일때를 고려함 (#113)

## [v0.4.8] - Wed, 17 Jul 2019 20:58:55 +0900
### Changed
- 봉사활동 시간대 변경 (#113)

## [v0.4.7] - Tue, 07 May 2019 21:06:33 +0900

### Changed
- 개인정보취급방침 변경 (#111)

## [v0.4.6] - Mon, 11 Jun 2018 13:01:46 +0900

### Changed
- Google API 인증 실패시 3번까지 재시도 (#109)

## [v0.4.5] - Fri, 04 May 2018 21:02:48 +0900

### Fixed
- Set default config file in docker image

## [v0.4.4] - Fri, 04 May 2018 16:00:44 +0900

### Changed
- docker image 에서 private key file 을 제거(대신에 bind mount 를 사용)

## [v0.4.3] - Fri, 04 May 2018 15:36:45 +0900

### Added
- travis-ci 에서 docker image 를 build

## [v0.4.2] - Tue, 23 Jan 2018 12:24:07 +0900

### Changed
- 열린옷장 위치안내 SMS 수정 (#72)

## [v0.4.1] - Tue, 14 Nov 2017 17:14:51 +0900

### Fixed
- 일별 봉사신청가능시간 버그 수정 (#106)

## [v0.4.0] - Thu, 02 Nov 2017 16:52:46 +0900

### Added
- dockerize

## [v0.3.13] - Tue, 22 Aug 2017 17:16:09 +0900

### Changed
- 첫 소개화면 이미지 변경 (#103)

## [v0.3.12] - Wed, 16 Aug 2017 16:04:07 +0900

### Added
- calendar_insert helper

### Chaned
- quickAdd 대신에 calendar_insert 를 사용해서 캘린더 이벤트를 등록

## [v0.3.11] - Wed, 16 Aug 2017 15:12:44 +0900

### Fixed
- Fix typo at google calendar quickadd text

## [v0.3.10] - Wed, 16 Aug 2017 15:05:49 +0900

### Changed
- google calendar quickadd text format

## [v0.3.9] - Wed, 16 Aug 2017 12:11:14 +0900

### Changed
- 봉사활동 시간변경 (#102)
  - 활동 시간을 시간 단위가 아닌 분단위까지 고려
  - 문자 메세지 및 구글캘린더에 분단위 까지 표시
