@@ -2,6 +2,9 @@
 The format is based on [Keep a Changelog](http://keepachangelog.com/)
 
 ## [Unreleased]
+### Fixed
+- 승인 이후에 google calendar 에 스케쥴 등록 (#120)
+
 ## [v0.4.13] - Sat, 28 Nov 2020 11:35:54 +0900
 ### Changed
 - 신청 간소화 (#120)
